# ct

./: .gitignore  CMakeLists.txt  README.md  config.env
inc/: area_generator.h  geometry.h  globals.h  quadratures.h  radon.h  stb_image_write.h  utilities.h
src/: geometry.cpp  main.cpp  quadratures.cpp  radon.cpp  utilities.cpp
